css changes and routed stats page.

--- a/main/static/style.css
+++ b/main/static/style.css
@@ -32,7 +32,13 @@ body {
     color:white;
 }
 
-form {
+.nav_search {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.home_search {
     display: flex;
     align-items: center;
     justify-content: center;
