--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="nav">
-        <a class="home_link" href="#">Strongside Stats</a>
+        <a class="home_link" href="{{ url_for('site.index') }}">Strongside Stats</a>
         {% block nav_search %}{% endblock %}
     </div>
     
