--- a/main/templates/site/index.html
+++ b/main/templates/site/index.html
@@ -3,7 +3,7 @@
 {% block title %}Player Stats{% endblock %}
 
 {% block content %}
-    <form class="home_search" action="{{ url_for('site.index') }}" method="get">
+    <form class="home_search" action="{{ url_for('site.stats') }}" method="get">
         <table>
             <tr>
                 <td><label for="summoner_name">Summoner name</label></td>
@@ -11,7 +11,7 @@
             </tr>
             <tr>
                 <td><label for="tagline">Tagline</label></td>
-                <td><input type="text" id="tagline" name="tag_line" placeholder="NA1"></td>
+                <td><input type="text" id="tagline" name="tagline" placeholder="NA1"></td>
             </tr>
             <tr>
                 <td colspan="2"><input type="submit" value="enter"></td>
