--- a/main/templates/site/stats.html
+++ b/main/templates/site/stats.html
@@ -14,15 +14,16 @@
         {% if method == 'POST' %}
             <p>{{ data[1]['queueType'] }}: {{ data[1]['tier'] }} {{ data[1]['rank'] }}</p>
         {% else %}
-            <p>{{ data['summoner_name']}}</p>
+            <p>session: {{ session['summoner_name'] }}</p>
+            <p>session: {{ session['tagline'] }}</p>
             {% if method == 'redirect' %}
-                <p>Error using riot api.</p>
+                <p>Error using riot api. Summoner name and tagline may be incorrect or player may not exist.</p>
             {% endif %}
         {% endif %}
 
         <form class="stats_update" action="{{ url_for('site.stats') }}" method="post">
-            <input type="text" name="summoner_name" value="{{ data['summoner_name'] }}" hidden>
-            <input type="text" name="tagline" value="{{ data['tagline'] }}" hidden>
+            <input type="text" name="summoner_name" value="{{ session['summoner_name'] }}" hidden>
+            <input type="text" name="tagline" value="{{ session['tagline'] }}" hidden>
             <input type="submit" value="Update">
         </form>
     </div>
