--- a/main/templates/site/stats.html
+++ b/main/templates/site/stats.html
@@ -11,11 +11,10 @@
 
 {% block content %}
     <div class="player_card">
+        <p>{{ session['summoner_name'] }}</p>
         {% if method == 'POST' %}
-            <p>{{ data[1]['queueType'] }}: {{ data[1]['tier'] }} {{ data[1]['rank'] }}</p>
+            <p>{{ leagues[1]['queueType'] }}: {{ leagues[1]['tier'] }} {{ leagues[1]['rank'] }}</p>
         {% else %}
-            <p>session: {{ session['summoner_name'] }}</p>
-            <p>session: {{ session['tagline'] }}</p>
             {% if method == 'redirect' %}
                 <p>Error using riot api. Summoner name and tagline may be incorrect or player may not exist.</p>
             {% endif %}
@@ -26,6 +25,14 @@
             <input type="text" name="tagline" value="{{ session['tagline'] }}" hidden>
             <input type="submit" value="Update">
         </form>
+    </div>
+
+    <div class="matches">
+        {% for match in metadata %}
+            <div class="match">
+                {{ match['platformId'] }}
+            </div>
+        {% endfor %}
     </div>
     
 {% endblock %}
