Fixed the queries in site.stats.

--- a/main/templates/site/stats.html
+++ b/main/templates/site/stats.html
@@ -28,7 +28,7 @@
     <div class="matches">
         {% for match in metadata %}
             <div class="match">
-                {{ match['platformId'] }}
+                {{ metadata['platformId'] }}
             </div>
         {% endfor %}
     </div>
