--- a/main/templates/site/index.html
+++ b/main/templates/site/index.html
@@ -7,11 +7,11 @@
         <table>
             <tr>
                 <td><label for="summoner_name">Summoner name</label></td>
-                <td><input type="text" id="summoner_name" name="summoner_name" placeholder="Summoner Name"></td>
+                <td><input type="text" id="summoner_name" name="summoner_name" placeholder="Summoner Name" required></td>
             </tr>
             <tr>
                 <td><label for="tagline">Tagline</label></td>
-                <td><input type="text" id="tagline" name="tagline" placeholder="NA1"></td>
+                <td><input type="text" id="tagline" name="tagline" placeholder="NA1" required></td>
             </tr>
             <tr>
                 <td colspan="2"><input type="submit" value="enter"></td>
